# TetrisTwins

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/Tetris/: color.h  control.h  draw.h  game.h  menu.h  remove.h  room.h  style.h  terminal.h  tetromino.h  ui.h  utils.h
include/Tetris/proto/: room.pb.h
include/Tetris/tetrominos/: define.h  tetro_i.h  tetro_j.h  tetro_l.h  tetro_o.h  tetro_s.h  tetro_t.h  tetro_z.h  tetromino.h
include/TetrisTwins/: game.h  menu.h  remove.h  style.h  ui.h
include/TetrisTwins/base/: noncopyable.h
include/TetrisTwins/network/: communicator.h  communicator_base.h  socket.h  tcp_client.h  tcp_server.h  udp_bc_receiver.h  udp_bc_sender.h  udp_client.h  udp_server.h
include/TetrisTwins/tetrominos/: define.h  tetro_i.h  tetro_j.h  tetro_l.h  tetro_o.h  tetro_s.h  tetro_t.h  tetro_z.h  tetromino.h
include/TetrisTwins/utils/: utils.h
include/tt/: color.h  control.h  double.h  game.h  menu.h  remove.h  room.h  single.h  style.h  terminal.h  ui.h
include/tt/net/: communicator.h  communicator_base.h  dispatcher.h  net_cross_platform_api.h  net_define.h  packer.h  socket.h  tcp_client.h  tcp_server.h  udp_bc_receiver.h  udp_bc_sender.h  udp_client.h  udp_server.h
include/tt/proto/: signal.pb.h
include/tt/tetrominos/: define.h  tetro_i.h  tetro_j.h  tetro_l.h  tetro_o.h  tetro_s.h  tetro_t.h  tetro_z.h  tetromino.h
include/tt/util/: device.h  math.h  noncopyable.h  platform.h  proto.h  safe_deque.h  util.h
include/tt/utils/: noncopyable.h  utils.h
proto/: tetrominos.proto
src/: CMakeLists.txt  control.cpp  double.cpp  draw.cpp  game.cpp  main.cpp  menu.cpp  remove.cpp  room.cpp  single.cpp  style.cpp  terminal.cpp  tetromino.cpp  ui.cpp  utils.cpp
src/net/: CMakeLists.txt  communicator.cpp  net_cross_platform_api.cpp  packer.cpp  socket.cpp  tcp_client.cpp  tcp_server.cpp  udp_bc_receiver.cpp  udp_bc_sender.cpp  udp_client.cpp  udp_server.cpp
src/network/: communicator.cpp  packer.cpp  socket.cpp  tcp_client.cpp  tcp_server.cpp  udp_bc_receiver.cpp  udp_bc_sender.cpp  udp_client.cpp  udp_server.cpp
src/proto/: CMakeLists.txt  info.proto  next.proto  room.pb.cc  room.proto  signal.pb.cc  signal.proto  tetromino.proto  tetrominos.proto
src/tetrominos/: CMakeLists.txt  tetro_i.cpp  tetro_j.cpp  tetro_l.cpp  tetro_o.cpp  tetro_s.cpp  tetro_t.cpp  tetro_z.cpp  tetromino.cpp
src/util/: CMakeLists.txt  device.cpp  math.cpp  util.cpp
src/utils/: CMakeLists.txt  utils.cpp
